RESOLVED FIXED217818
sdpFmtLine should be missing from RTCRtpCodecCapability instead of being an empty string
https://bugs.webkit.org/show_bug.cgi?id=217818
Summary sdpFmtLine should be missing from RTCRtpCodecCapability instead of being an e...
youenn fablet
Reported 2020-10-16 05:43:43 PDT
sdpFmtLine should be missing from RTCRtpCodecCapability instead of being an empty string
Attachments
Patch (4.21 KB, patch)
2020-10-16 05:45 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2020-10-16 05:44:15 PDT
youenn fablet
Comment 2 2020-10-16 05:45:49 PDT
EWS
Comment 3 2020-10-16 08:38:34 PDT
Committed r268592: <https://trac.webkit.org/changeset/268592> All reviewed patches have been landed. Closing bug and clearing flags on attachment 411561 [details].
Radar WebKit Bug Importer
Comment 4 2020-10-16 08:39:19 PDT
Darin Adler
Comment 5 2020-10-16 09:31:48 PDT
Comment on attachment 411561 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=411561&action=review > Source/WebCore/platform/mediastream/libwebrtc/LibWebRTCProvider.cpp:415 > + sdpFmtpLine = sdpFmtpLineBuilder.toString(); In future, for cases like this I think we might want to add a nullIfEmpty function that takes a String&& and returns a String. Seems a shame to add a local variable just for this transformation. Although that "llIf" sequence makes the function name ugly.
Note You need to log in before you can comment on or make changes to this bug.