sdpFmtLine should be missing from RTCRtpCodecCapability instead of being an empty string https://bugs.webkit.org/show_bug.cgi?id=217818

Reviewed by Eric Carlson.

Source/WebCore:

Covered by updated test.

* platform/mediastream/libwebrtc/LibWebRTCProvider.cpp:
(WebCore::toRTCRtpCapabilities):
If line is empty, make sure to return a null string instead.

LayoutTests:

* webrtc/video-mute-vp8.html:


Canonical link: https://commits.webkit.org/230554@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@268592 268f45cc-cd09-0410-ab3c-d52691b4dbfc